# flayAI

./: .editorconfig  .gitignore  .markdownlint.json  AI_PLAN.md  CLAUDE.md  LICENSE  README.md  _q.json  config.yaml  diary_prompts.example.yaml  docker-compose.yml  pyproject.toml  subtitle_prompts.example.yaml
.claude/skills/flayai-design/: .thumbnail  HANDOFF-claude-code.md  README.md  SKILL.md  _ds_bundle.js  styles.css
.claude/skills/flayai-design/components/core/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  Chip.d.ts  Chip.jsx  Chip.prompt.md  Tabs.d.ts  Tabs.jsx  Tabs.prompt.md  core.card.html
.claude/skills/flayai-design/components/product/: Composer.d.ts  Composer.jsx  Composer.prompt.md  ThemeToggle.d.ts  ThemeToggle.jsx  ThemeToggle.prompt.md  ToolCallChip.d.ts  ToolCallChip.jsx  ToolCallChip.prompt.md  VideoCard.d.ts  VideoCard.jsx  VideoCard.prompt.md  product.card.html
.claude/skills/flayai-design/guidelines/: colors-accent.card.html  colors-diary.card.html  colors-ink.card.html  colors-status.card.html  colors-surface-dark.card.html  colors-surface-light.card.html  elevation.card.html  radius-scale.card.html  spacing-scale.card.html  tile-rhythm.card.html  type-body.card.html  type-display.card.html  type-mono-serif.card.html  type-weights.card.html
.claude/skills/flayai-design/tokens/: base.css  colors.css  fonts.css  radius-shadow.css  spacing.css  typography.css
.claude/skills/flayai-design/ui_kits/admin/: README.md  index.html  screens.jsx
.claude/skills/flayai-design/ui_kits/diary/: README.md  index.html  screens.jsx
.claude/skills/flayai-design/ui_kits/search-chat/: README.md  index.html  screens.jsx
.github/: copilot-instructions.md
.github/chatmodes/: flayai.chatmode.md
.github/instructions/: frontend.instructions.md  indexer.instructions.md  python.instructions.md  rag.instructions.md  scripts.instructions.md
.github/prompts/: add-api-endpoint.prompt.md  add-rag-tool.prompt.md  docs-sync-check.prompt.md  reindex.prompt.md  restart-services.prompt.md
apps/api/: __init__.py  main.py
apps/api/routers/: admin.py  diary.py  image.py  ocr.py  stabilize.py  subtitle.py
apps/web/: eslint.config.mjs  package-lock.json  package.json  server.js
apps/web/public/: manifest.webmanifest
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/_components/: AppHeader.tsx  SectionCard.tsx  ThemeToggle.tsx  useImageDropPaste.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/diary/: layout.tsx  page.tsx
apps/web/src/app/face/: page.tsx
apps/web/src/app/image/: page.tsx
apps/web/src/app/labels/: page.tsx
apps/web/src/app/stabilize/: page.tsx
apps/web/src/app/subtitle/: page.tsx
data/: state.json
data/qdrant/: raft_state.json
data/qdrant/collections/videos/: payload_index.json
data/qdrant/collections/videos/0/: newest_clocks.json  replica_state.json
data/qdrant/collections/videos/0/segments/2c367401-bc52-4988-a006-ef2e2da3c65b/: id_tracker.mappings  id_tracker.versions  segment.json
data/qdrant/collections/videos/0/segments/301c6fa3-ddb8-411f-b047-b2f65d751d82/: id_tracker.mappings  id_tracker.versions  segment.json
data/qdrant/collections/videos/0/segments/5b2e6311-a528-4f50-ba8c-08060c780707/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
data/qdrant/collections/videos/0/segments/70ba3088-691c-4a36-9ad0-5662cddba28b/: id_tracker.mappings  id_tracker.versions
data/qdrant/collections/videos/0/segments/831fd4a2-1b1d-4ec5-951a-1f4b79fb3fa4/: mutable_id_tracker.mappings  mutable_id_tracker.versions
data/qdrant/collections/videos/0/segments/895c0a93-85ee-4c17-92d2-69e6a07d0216/: id_tracker.mappings  id_tracker.versions  (+1 more)
data/qdrant/collections/videos/0/wal/: first-index
data/sqlite/: flay.db-shm  flay.db-wal
doc/: README.md  api-reference.md  architecture.md  chat-and-rag.md  dev-guide.md  indexing-pipeline.md  overview.md
docs/: AI_PLAN.md  README.md  TODO.md  admin.md  api-reference.md  architecture.md  chat-and-rag.md  dev-guide.md  diary.md  enterprise-rag-plan-v2-deck.pptx  enterprise-rag-plan-v2.docx  enterprise-rag-plan-v2.md  enterprise-rag-plan.docx  enterprise-rag-plan.md  indexing-pipeline.md  overview.md  subtitle-plan.md  translate-api.md  video-stabilization-plan.md
docs/_planbuild/: gen.js  gen2.js  logo.py  mockup.py  mockup2.py  mockup3.py  package-lock.json  pptxgen.js
eval/: golden.yaml  run_eval.py
eval/results/: 20260516-131801.json  20260516-132035.json
scripts/: _check_admin_stats.py  _check_ocr.py  _check_ocr_missing.py  _smoke_bge.py  backup.ps1  bootstrap.ps1  clean_corrupted_translations.py  diag_cosine.py  diag_metadata.py  m2_chat_scenarios.py  m4_clip_recall.py  nightly_index.ps1  nightly_subtitle.ps1  overnight.ps1
tests/: test_actress_merge.py  test_classify_kind.py  test_diary_import.py  test_diary_store.py  test_poster_parser.py  test_rag_ranker.py  test_stabilizer.py  test_subtitler.py
(+68 files in other folders)
