[project]
name = "flayai"
version = "0.1.0"
description = "Personal LLM + RAG for video collection management"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-multipart>=0.0.9",

    # Vector DB
    "qdrant-client>=1.9",

    # Embedding / ML
    "sentence-transformers>=3.0",
    "transformers>=4.41",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "open-clip-torch>=2.24",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.18",

    # Image / OCR
    "rapidocr-onnxruntime>=1.4",
    "Pillow>=10.3",

    # 영상 안정화 인물 모드 — YOLO11-seg 주인공 추적 (opencv 는 rapidocr 가 이미 끌어옴)
    # 추가 후 lock 동기화: `uv lock` (torch cu124 는 [tool.uv.sources] 로 고정 유지)
    "ultralytics>=8.4",

    # Translation
    "sentencepiece>=0.2",
    "sacremoses>=0.1",

    # Document parsing
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pypdf>=4.2",

    # Utilities
    "setuptools>=70",  # pkg_resources 런타임 사용 라이브러리 대비 (uv 가 고아로 제거하지 않게 명시)
    "psutil>=5.9",  # 관리자 시스템 모니터링(CPU/RAM)
    "sqlite-utils>=3.36",
    "watchdog>=4.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "numpy>=1.26",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.scripts]
flay-api    = "apps.api.main:main"
flay-index  = "packages.indexer.cli:app"
flay-stab   = "packages.stabilizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

# GPU 빌드 고정 — 이 프로젝트는 단일 개인 PC(NVIDIA GPU + CUDA 12.4) 전제.
# lock 에 GPU 빌드를 박아두어 `uv sync` 가 CPU 빌드로 되돌리지 않게 한다.
# (CPU/다른 CUDA 환경에 배포하면 깨질 수 있음 — 의도된 가정.)
[tool.uv]
# rapidocr-onnxruntime 가 끌어오는 CPU onnxruntime 를 제외(불가능 마커로 무력화).
# onnxruntime 와 onnxruntime-gpu 는 같은 모듈명이라 공존 불가 — CPU 가 GPU 를 덮어쓰면
# CUDAExecutionProvider 가 사라져 InsightFace 가 CPU 로 동작한다. onnxruntime-gpu 만 남긴다.
override-dependencies = ["onnxruntime; sys_platform == 'emscripten'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line too long (black이 처리)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]
